--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="./index2.html">MoGo</a>
+        <a href="./index.html">MoGo</a>
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
@@ -41,17 +41,17 @@
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
          <ul>
             <li>
-<img src="./img/first-man.jpg" alt="first-man">
+<img src="./img.MoGo/first-man.jpg" alt="first-man">
 <h4>Matthew Dix</h4>
 <p>Graphic Design</p>
             </li>
             <li>
-<img src="./img/second-man.jpg" alt="second-man">
+<img src="./img.MoGo/second-man.jpg" alt="second-man">
 <h4>Christopher Campbell</h4>
 <p>Branding/UX design</p>
             </li>
             <li>
- <img src="./img/third-man.jpg" alt="third-man">
+ <img src="./img.MoGo/third-man.jpg" alt="third-man">
  <h4>Michael Fertig </h4>
  <p>Developer</p>
             </li>
