--- a/index.html
+++ b/index.html
@@ -37,23 +37,48 @@
         <h3 class="services-title">Amazing Services</h3>
         <ul class="services-list">
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-alarm"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-line-up"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-display"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-list"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-house"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
             <li class="services-list-item">
+                <svg class="svg-item" width="37" height="37">
+                     <use href="./img.MoGo/icon/symbol-defs.svg#mogo-digital"></use></svg>
+                     <div class="services-list-box">
                 <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p></li>
+            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                 sed do eiusmod tempor.</p></div></li>
+            
         </ul>
         </section>
         <section class="team">
