--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-<link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="./css/styles.min.css">
 </head>
 <body>
     <div class="container">
@@ -18,99 +18,99 @@
         
         <nav class="nav">
             <ul class="nav-list">
-                <li class="nav-list-item">
-                    <a href="#" class="nav-list-link">About</a></li>
-                <li class="nav-list-item">
-                    <a href="#" class="nav-list-link">Service</a></li>
-                <li class="nav-list-item">
-                    <a href="#" class="nav-list-link">Work</a></li>
-                <li class="nav-list-item">
-                    <a href="#" class="nav-list-link">Blog</a></li>
-                <li class="nav-list-item">
-                    <a href="#" class="nav-list-link">Contact</a></li>
+                <li class="nav-list__item">
+                    <a href="#" class="nav-list__link">About</a></li>
+                <li class="nav-list__item">
+                    <a href="#" class="nav-list__link">Service</a></li>
+                <li class="nav-list__item">
+                    <a href="#" class="nav-list__link">Work</a></li>
+                <li class="nav-list__item">
+                    <a href="#" class="nav-list__link">Blog</a></li>
+                <li class="nav-list__item">
+                    <a href="#" class="nav-list__link">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main class="main">
         <section class="services">
-        <h2 class="services-info">We work with</h2>
-        <h3 class="services-title">Amazing Services</h3>
+        <h2 class="services__info">We work with</h2>
+        <h3 class="services__title">Amazing Services</h3>
         <ul class="services-list">
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-alarm"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-line-up"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-display"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-list"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-house"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
-            <li class="services-list-item">
-                <svg class="svg-item" width="37" height="37">
+            <li class="services-list__item">
+                <svg class="services-list__svg" width="37" height="37">
                      <use href="./img.MoGo/icon/symbol-defs.svg#mogo-digital"></use></svg>
-                     <div class="services-list-box">
-                <h2 class="services-list-title">Photography</h2>
-            <p class="services-list-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                     <div class="services-list__box">
+                <h2 class="services-list__title">Photography</h2>
+            <p class="services-list__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                  sed do eiusmod tempor.</p></div></li>
             
         </ul>
         </section>
         <section class="team">
-        <h2 class="team-info">Who we are</h2>
-        <h3 class="team-title">Meet our team</h3>
-        <p class="team-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        <h2 class="team__info">Who we are</h2>
+        <h3 class="team__title">Meet our team</h3>
+        <p class="team__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
          <ul class="team-list">
-            <li class="team-list-item">
-<img src="./img.MoGo/first-man.jpg" alt="first-man" class="team-list-img">
-<h4 class="team-list-name">Matthew Dix</h4>
-<p class="team-list-position">Graphic Design</p>
+            <li class="team-list__item">
+<img src="./img.MoGo/first-man.jpg" alt="first-man" class="team-list__img">
+<h4 class="team-list__name">Matthew Dix</h4>
+<p class="team-list__position">Graphic Design</p>
             </li>
-            <li class="team-list-item">
-<img src="./img.MoGo/second-man.jpg" alt="second-man" class="team-list-img">
-<h4 class="team-list-name">Christopher Campbell</h4>
-<p class="team-list-position">Branding/UX design</p>
+            <li class="team-list__item">
+<img src="./img.MoGo/second-man.jpg" alt="second-man" class="team-list__img">
+<h4 class="team-list__name">Christopher Campbell</h4>
+<p class="team-list__position">Branding/UX design</p>
             </li>
-            <li class="team-list-item">
- <img src="./img.MoGo/third-man.jpg" alt="third-man" class="team-list-img">
- <h4 class="team-list-name">Michael Fertig </h4>
- <p class="team-list-position">Developer</p>
-            </li class="team-list-item">
+            <li class="team-list__item">
+ <img src="./img.MoGo/third-man.jpg" alt="third-man" class="team-list__img">
+ <h4 class="team-list__name">Michael Fertig </h4>
+ <p class="team-list__position">Developer</p>
+            </li class="team-list__item">
          </ul>
         </section>
     </main>
     <footer class="footer">
-        <p class="footer-info">&copy;2016 MoGo free PSD template by 
-            <a href="#" class="footer-link">Laaqiq</a></p>
+        <p class="footer__info">&copy;2016 MoGo free PSD template by 
+            <a href="#" class="footer__link">Laaqiq</a></p>
             <form class="footer-form">
-            <input type='text' name='email' placeholder="Your Email..." class="footer-form-input">
-            <button type="submit" class="footer-form-btn">Subscribe</button>
+            <input type='text' name='email' placeholder="Your Email..." class="footer-form__input">
+            <button type="submit" class="footer-form__btn">Subscribe</button>
         </form>
     </footer>
 </div>
